{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 26,
  "lineage": "ff39238d-cdc5-c057-07cb-c6812b4d3ecb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025ca978d4c1d9825",
            "arn": "arn:aws:ec2:us-east-2:442042553195:instance/i-0cc0b1820279dd269",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc0b1820279dd269",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00a4fb0a00ebcc291"
              }
            ],
            "primary_network_interface_id": "eni-00a4fb0a00ebcc291",
            "private_dns": "ip-172-31-7-110.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.110",
            "public_dns": "ec2-3-16-78-109.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.78.109",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09135f2f7d553d32b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg_automated"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f92c454d8ad37a04",
            "tags": {
              "Name": "automated_ec2"
            },
            "tags_all": {
              "Name": "automated_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03dcedf749b3b628f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "i-0cc0b1820279dd269",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_automated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_automated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group/sg-03dcedf749b3b628f",
            "description": "Automated Security Group for automated ec2",
            "egress": [],
            "id": "sg-03dcedf749b3b628f",
            "ingress": [],
            "name": "sg_automated",
            "name_prefix": "",
            "owner_id": "442042553195",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afc5b130a7ec8e80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sg-03dcedf749b3b628f",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-0c7e4e46388c0b53f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c7e4e46388c0b53f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-03dcedf749b3b628f",
            "security_group_rule_id": "sgr-0c7e4e46388c0b53f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-0c7e4e46388c0b53f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_automated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-0488b8c4a899300b1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0488b8c4a899300b1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-03dcedf749b3b628f",
            "security_group_rule_id": "sgr-0488b8c4a899300b1",
            "tags": null,
            "tags_all": {},
            "to_port": 100
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-0488b8c4a899300b1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.sg_automated"
          ]
        }
      ]
    }
  ]
}